# riveting-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.extras  LICENCE  LICENSE  README.md  default.Dockerfile  docker-compose.yml  rustfmt.toml
.github/workflows/: docker.yml  rust.yml
src/: config.rs  main.rs  parser.rs  storage.rs  utils.rs
src/commands/: admin.rs  arg.rs  builder.rs  function.rs  handle.rs  meta.rs  mod.rs  owner.rs  request.rs
src/commands/admin/: alias.rs  bot.rs  config.rs  mod.rs  muter.rs  perms.rs  roles.rs  scheduler.rs  silence.rs
src/commands/bot/: mod.rs
src/commands/bot/admin/: alias.rs  bot.rs  config.rs  mod.rs  perms.rs  roles.rs  scheduler.rs  silence.rs
src/commands/bot/meta/: bulk.rs  essential.rs  mod.rs  voice.rs
src/commands/bot/owner/: mod.rs
src/commands/bot/user/: battleships.rs  coinflip.rs  engine.py  fuel.rs  joke.rs  mod.rs  quote.rs  time.rs  user_info.rs  voice.rs
src/commands/builder/: mod.rs  twilight.rs
src/commands/meta/: mod.rs
src/commands/owner/: mod.rs
src/commands/user/: fuel.rs  mod.rs  muter.rs  quote.rs  time.rs  voice.rs
src/commands_v2/: arg.rs  function.rs  handle.rs  mod.rs  request.rs
src/commands_v2/bot/: mod.rs
src/commands_v2/bot/admin/: alias.rs  bot.rs  config.rs  mod.rs  perms.rs  roles.rs  scheduler.rs  silence.rs
src/commands_v2/bot/meta/: mod.rs
src/commands_v2/bot/owner/: mod.rs
src/commands_v2/bot/user/: coinflip.rs  fuel.rs  joke.rs  mod.rs  quote.rs  time.rs  user_info.rs  voice.rs
src/commands_v2/builder/: mod.rs  twilight.rs
src/config/: mod.rs  storage.rs
