[package]
edition = "2021"
name = "riveting-bot"
repository = "https://github.com/Samzyre/riveting-bot"
version = "0.2.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dateparser = "0.2"
derive_more = "0.99"
dotenv = "0.15"
futures = "0.3"
indoc = "2.0"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
twilight-cache-inmemory = "0.15"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-mention = "0.15"
twilight-model = "0.15"
twilight-standby = "0.15"
twilight-validate = "0.15"

[dependencies.twilight-util]
features = ["full"]
version = "0.15"

[dependencies.reqwest]
default-features = false
features = ["json", "rustls-tls"]
version = "0.11"

[dependencies.chrono]
default-features = false
features = ["std", "clock", "time", "serde"]
version = "0.4"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[dependencies.tokio]
features = ["full"]
version = "1.17"

[dependencies.songbird]
default-features = false
features = ["driver", "twilight-rustls", "zlib-stock"]
optional = true
version = "0.3"
# git = "https://github.com/serenity-rs/songbird"
# branch = "next"

[features]
# Default features
default = ["user", "admin", "owner"]
# Debugging features
debug = ["all-intents", "bulk-delete"]
# Full set of features
full = ["user", "admin", "owner", "debug", "voice", "ban-at-everyone"]
#
admin = []
all-intents = []
ban-at-everyone = []
bulk-delete = ["admin"]
owner = []
user = []
voice = ["dep:songbird", "user"]
